--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,15 @@
       }
     },
     {
+      "name": "Debug nodejs",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceRoot}/app.server.dev.js",
+      "sourceMaps": true,
+      "outDir": "${workspaceRoot}/dist/dev",
+      "cwd": "${workspaceRoot}"
+    },
+    {
       "name": "Attach to Chrome, with sourcemaps",
       "type": "chrome",
       "request": "attach",
