--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "e2e.ci": "gulp build.prod --color && gulp build.js.e2e --color && gulp e2e --color",
     "tests.all": "npm test && npm run e2e.ci",
     "webdriver-start": "webdriver-manager start",
-    "webdriver-update": "webdriver-manager update"
+    "webdriver-update": "webdriver-manager update",
+    "typings": "typings"
   },
   "author": "Minko Gechev <mgechev>",
   "contributors": [
@@ -144,10 +145,13 @@
     "express": "^4.14.0",
     "intl": "^1.2.5",
     "minimatch": "^3.0.3",
-    "redis": "^2.6.3",
+    "mongodb": "^2.2.11",
+    "mongojs": "^2.2.2",
+    "mongoose": "^4.3.4",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
+    "typings": "^2.0.0",
     "zone.js": "0.6.25"
   }
 }
