mongo integration fixes

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
       {
           "taskName": "start",
           "args": [
+            "--port=9001",
              "start"
           ]
       },
