--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,13 @@
       ]
     },
     {
+      "taskName": "build.dev_full",
+      "args": [
+        "run",
+        "build.dev_full"
+      ]
+    },
+    {
       "taskName": "tslint",
       "args": [
         "run",
