--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -29,6 +29,13 @@
       ]
     },
     {
+      "taskName": "build.prod",
+      "args": [
+        "run",
+        "build.prod"
+      ]
+    },
+    {
       "taskName": "tslint",
       "args": [
         "run",
