--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "e2e.ci": "gulp build.prod --color && gulp build.js.e2e --color && gulp e2e --color",
     "tests.all": "npm test && npm run e2e.ci",
     "webdriver-start": "webdriver-manager start",
-    "webdriver-update": "webdriver-manager update",
-    "typings": "typings"
+    "webdriver-update": "webdriver-manager update"
   },
   "author": "Minko Gechev <mgechev>",
   "contributors": [
@@ -50,6 +49,7 @@
     "@angular/compiler-cli": "~2.1.2",
     "@angular/platform-server": "~2.1.2",
     "@angular/tsc-wrapped": "0.3.0",
+    "@types/mongoose": "*",
     "@types/async": "^2.0.32",
     "@types/browser-sync": "^0.0.34",
     "@types/core-js": "0.9.34",
@@ -153,7 +153,6 @@
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
-    "typings": "^2.0.0",
     "zone.js": "0.6.25"
   }
 }
