--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,13 @@
       "cwd": "${workspaceRoot}"
     },
     {
+      "name": "Start server debug (no rebuild)",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceRoot}/app.server.dev.js",
+      "cwd": "${workspaceRoot}"
+    },
+    {
       "name": "Launch Chrome against localhost, with sourcemaps",
       "type": "chrome",
       "request": "launch",
