--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "mongodb": "^2.2.11",
     "mongojs": "^2.2.2",
     "mongoose": "^4.3.4",
+    "morgan": "^1.8.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
