setup server tests configuration, add mocha tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,19 @@
       ]
     },
     {
+      "type": "node",
+      "request": "launch",
+      "preLaunchTask": "run.tests",
+      "name": "Mocha Tests",
+      "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+      "args": ["${workspaceRoot}/dist/dev/tests/**/*.js", "--no-timeouts"],
+      "cwd": "${workspaceRoot}",
+      "stopOnEntry": false,
+      "sourceMaps": true,
+      "runtimeExecutable": null,
+      "internalConsoleOptions": "openOnSessionStart"
+    },
+    {
       "name": "Start server debug (fast)",
       "type": "node",
       "request": "launch",
