--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "start.deving": "gulp serve.dev --nolazy --debug-brk=5858 --color",
     "tasks.list": "gulp --tasks-simple --color",
     "test": "gulp test --color",
+    "test.server": "nyc --reporter=html --exclude src/**/*.spec.ts gulp test.server --color",
     "e2e.ci": "gulp build.prod --color && gulp build.js.e2e --color && gulp e2e --color",
     "tests.all": "npm test && npm run e2e.ci",
     "webdriver-start": "webdriver-manager start",
@@ -72,6 +73,7 @@
     "@types/body-parser": "^0.0.33",
     "@types/compression": "^0.0.33",
     "@types/zone.js": "^0.0.27",
+    "@types/mocha": "*",
     "async": "^2.1.1",
     "autoprefixer": "^6.5.1",
     "browser-sync": "^2.17.3",
@@ -129,7 +131,17 @@
     "tslint": "^3.15.1",
     "typescript": "^2.0.3",
     "walk": "^2.3.9",
-    "yargs": "^6.0.0"
+    "yargs": "^6.0.0",
+    "karma-mocha": "*",
+    "mocha": "*",
+    "gulp-mocha": "*",
+    "nyc": "*",
+    "node-notifier": "*",
+    "jsdom": "*",
+    "async-mocha": "*",
+    "supertest": "*",
+    "mocha-mongoose": "*",
+    "chai": "*"
   },
   "dependencies": {
     "@angular/common": "~2.1.2",
