--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ gulpfile.js.map
 .DS_Store
 src/client/app/shared/config/env.config.js
 src/client/app/shared/config/env.config.js.map
+
+# Tests output
+.nyc_output
