--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build.dev_full": "gulp build.dev_full --color --env-config dev --scss=true",
     "build.dev.watch": "gulp build.dev.watch --color",
     "build.e2e": "gulp build.e2e --color",
-    "build.prod": "gulp build.prod --color --env-config prod --build-type prod --scss=true",
+    "build.prod": "gulp build.dev && npm run tests.all && gulp build.prod --color --env-config prod --build-type prod --scss=true",
     "build.prod.exp": "gulp build.prod.exp --color --env-config prod --build-type prod",
     "build.test": "gulp build.test --color",
     "test.watch": "gulp test.watch --color",
@@ -35,7 +35,7 @@
     "test": "gulp test --color",
     "test.server": "nyc --reporter=html --exclude dist/**/*.spec.js gulp test.server --color",
     "e2e.ci": "gulp build.prod --color && gulp build.js.e2e --color && gulp e2e --color",
-    "tests.all": "npm test && npm run e2e.ci",
+    "tests.all": "npm test && npm run test.server",
     "webdriver-start": "webdriver-manager start",
     "webdriver-update": "webdriver-manager update"
   },
