--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/compression": "^0.0.33",
     "@types/zone.js": "^0.0.27",
     "@types/mocha": "*",
+    "@types/chai": "*",
     "async": "^2.1.1",
     "autoprefixer": "^6.5.1",
     "browser-sync": "^2.17.3",
